Various Fixes
- Re-organised user children so they reflect the super
- Added separate menus for admin and client
- added equals override methods for exercise and user
- tidied up the retrievesessions method in filtuitls to remove the file extension
- Main method now defines a scanner which gets passed around the entire program
- fixed an infinite loop in the signup method in users